# OpenTAS64

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
assets/: README.md
docs/: README.md
plugins/: README.md
src/: App.cpp  App.h  main.cpp
src/core/: App.cpp  App.h  README.md
src/emulator/: README.md
src/input/: README.md
src/project/: README.md
src/ui/: README.md
